--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : Nanjing University of Finance and Economics
+  employer         : "Nanjing University of Finance and Economics"
   uri              : # URL
   email            : "none@example.org" 
 
