--- a/_config.yml
+++ b/_config.yml
@@ -22,29 +22,29 @@ repository               : "kxwangnufe/kxwangnufe.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Kaixiang Wang"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Nanjing University of Finance and Economics"
+  #location         : "Earth"
+  #employer         : "Nanjing University of Finance and Economics"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "kxwang@nufe.edu.cn" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
+  #arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=BRcGJ5IAAAAJ&hl=zh-CN"
-  impactstory      : # URL
+  #impactstory      : # URL
   orcid            : "https://orcid.org/0009-0002-9633-287X"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  #semantic         : # URL
+  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #researchgate     : # URL
+  #scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  #github           : "academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
