--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   #arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=BRcGJ5IAAAAJ&hl=zh-CN"
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=BRcGJ5IAAAAJ&view_op=list_works&sortby=pubdate"
   #impactstory      : # URL
   orcid            : "https://orcid.org/0009-0002-9633-287X"
   #semantic         : # URL
